@@ -1,3 +1,4 @@
+2163 [OneClick] fixed muxing of external subtitle files
 2162 [OneClick] added up/down buttons for the indexer priority selection
 2161 [OneClick] added option for the default output directory
 2160 [OneClick] added option to disable audio/video tracks completely by default
